tests/compile_fail/body_on_method_2.stderr
error: Missing `#[require_unsafe_in_bodies]` on the enscoping `trait` or `impl` block.
            
  --> $DIR/body_on_method_2.rs:18:5
   |
18 |     #[require_unsafe_in_body]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: this error originates in an attribute macro (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0046]: not all trait items implemented, missing: `my_read`
  --> $DIR/body_on_method_2.rs:17:1
   |
10 | /     unsafe
11 | |     fn my_read<U> (self: &'_ Self, p: *const U) -> U
12 | |     where
13 | |         U : Copy,
14 | |     ;
   | |_____- `my_read` from trait
...
17 |   impl<T> MyRead for Foo<T> {
   |   ^^^^^^^^^^^^^^^^^^^^^^^^^ missing `my_read` in implementation
